--- a/Index.html
+++ b/Index.html
@@ -2,35 +2,36 @@
 <html>
 	<head>
     <meta charset="utf-8"/>
-		<link type="text/css" rel="stylesheet" href="bootstrap.css"/>
+		<link rel="stylesheet" href="bootstrap.css"/>
 		<link rel="stylesheet" href="styles.css"/>
 		<title>Anouk Garin_Maquettiste</title>
 	</head>
 
 <body>
+	<div class="container">
+
+	<!--Image de tête de CV-->
 	<header>
+			<div class="title">
+					<img class="img-header img-responsive" src="images/CVAnouk_VisuelHeader.png">
+					<h1>Anouk GARIN_Maquettiste Print/Web</h1>
+			</div>
 	</header>
+
 	<section>
-		<div class="container-fluid">
 			<div class="row">
-			<!--Image de tête de CV-->
-				<div class="col-md-12">
-					<div class="title">
-					<img class="img-header" src="images/CVAnouk_VisuelHeader.jpg"></>
-					<h1><img src="images/PhotoAnouk_mini.jpg" class="image-flottante"/>Anouk GARIN_Maquettiste Print/Web</h1>
-					</div>
-				</div>
 			<!--Col Informations-->
 				<div class="col-md-3">
-					<h4>Informations</h4>
-							<p>06 13 63 85 49</p>
-							<a href="mailto:anouk.garin@wanadoo.fr">anouk.garin@wanadoo.fr</a>
-							<p>17 rue A. Marchand</p>
-							<p>18400 Lunery</p>
-							<p>née le 2 mai 1975</p>
-							<p>à Bourg-en-Bresse</p>
-							<p>nationalité française</p>
-							<p>permis A et B</p>
+					<h3>Informations</h3>
+							<img class=" image-flottante" src="images/PhotoAnouk_mini.jpg"/></br>
+							<p>06 13 63 85 49</br>
+							<a href="mailto:anouk.garin@wanadoo.fr">anouk.garin@wanadoo.fr</a></p>
+							<p>17 rue A. Marchand<br />
+							18400 Lunery<br /></p>
+							<p>née le 2 mai 1975<br />
+							à Bourg-en-Bresse<br />
+							nationalité française</p>
+							<p>permis A et B<br /><br /></p>
 					<h4>Compléments</h4>
 							<p>Utilisation des logiciels suivants sous univers Macintosh et PC :</p>
 							<ul>
@@ -49,7 +50,7 @@
 							Mise en page de livres (scolaire, pratique, …), périodiques, plaquettes, annonces presse, affiches, …<br />
 							Atelier Chévara - SEPT L'Hôtellerie Restauration - Editions BPI, …</p>
 						<hr>
-						<p>Maquettiste<br />
+						<p>Maquettiste<br/>
 							mars 2013 - décembre 2013<br/>
 							Catalogues de produits, insertions publicitaires, papéterie, …<br/>
 							AFR</p>
@@ -87,16 +88,21 @@
 							<li>Word</li>
 							<li>Excel</li><br/>
 						</ul>
-					</div>
 				</div>
 			<!--Col Loisirs-->
 				<div class="col-md-3">
 					<h3>Loisirs</h3>
 						<p>Lecture, marche active, moto, bricolage, déco. Investie dans une association dont le but est de promouvoir la musique Rock'n'roll et les véhicules anciens.</p>
-					</div>
 				</div>
 			</div>
-		</div
+	</section>
+
+</div>
+
+<footer>
+	<div class="mail">
+		Contact <a href="mailto:anouk.garin@wanadoo.fr">anouk.garin@wanadoo.fr</a>
 	</div>
-</section>
+</div>
 </body>
+</html>
